--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
-    "vue": "^2.5.17",
+    "vue": "^2.5.21",
     "vue-loader": "14.2.2",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.21"
   },
   "devDependencies": {
-    "webpack-dev-server": "2.11.2"
+    "webpack-dev-server": "^3.1.14"
   }
 }
